--- a/about.html
+++ b/about.html
@@ -30,6 +30,9 @@
           <a href="about.html" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-orange-300 md:p-0  ">About</a>
         </li>
         <li>
+          <a href="memories.html" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-orange-300 md:p-0  ">Memories</a>
+        </li>
+        <li>
           <a href="contact.html" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-orange-300 md:p-0  ">Contact</a>
         </li>
       </ul>
@@ -48,7 +51,7 @@
       <p class="mb-5 text-gray-200">
         Stands for Smart Diligent Religious Generation, a generation full of smart and diligent Muslims who are born to be a leader and able to change the world
       </p>
-      
+      <button class="btn glass bg-gray-300 hover:bg-orange-400 text-gray-700 hover:text-white"> SMADIRETION </button>
     </div>
   </div>
 </div>
@@ -106,8 +109,8 @@
       </div>
       <div class="timeline-start mb-10 md:text-end">
         <time class="font-mono italic">2020</time>
-        <div class="text-lg font-black">The Beginning - kelas 7</div>
-        Kami para bocah yang baru berganti seragam biru - putih datang ke sebuah boarding school untuk menempa ilmu baru kami, tetapi bukan hanya ilmu pengetahuan saja yang kamu tempa, kami juga menempa ilmu sosial yang mempelajari pentingnya bersosialisasi dari ilmu yang kita dapatkan. Terbentuklah angkatan SMADIRETION acronym dari Smart Diligent Religious Generation yang bermakna Generasi yang berisi Muslim yang pintar dan rajin. SMADIRETION berasal dari Sekolah Al Bunyan dengan 60+ santri dari berbagai daerah.
+        <div class="text-lg font-black">The Beginning</div>
+      Terbentuklah angkatan SMADIRETION acronym dari Smart Diligent Religious Generation yang bermakna Generasi yang berisi Muslim yang pintar dan rajin. SMADIRETION berasal dari Sekolah Al Bunyan dengan 60+ santri dari berbagai daerah.
       </div>
       <hr />
     </li>
@@ -127,8 +130,8 @@
       </div>
       <div class="timeline-end mb-10">
         <time class="font-mono italic">2021</time>
-        <div class="text-lg font-black">Kelas 8</div>
-        Sudah setahun SMADIRETION dibentuk dan belajar di Sekolah Al Bunyan Boarding School dan semakin tahun menambah semakin banyak pula siswa yang hadir di SMADIRETION. namun kita juga tak luput dari banyak masalah kita hadapi, hari ke hari, masalah tak kunjung berhenti dan semakin menjadi jadi, solidaritas adalah kunci jawaban untuk menghadapi masalah masalah sulit ini, dan juga mental kami yang terus membesar bersama
+        <div class="text-lg font-black">Bonding</div>
+        Sudah setahun SMADIRETION dibentuk dan belajar di Sekolah Al Bunyan Boarding School dan semakin tahun menambah semakin banyak pula siswa yang hadir di SMADIRETION. SMADIRETION semakin 
       </div>
       <hr />
     </li>
@@ -147,9 +150,13 @@
         </svg>
       </div>
       <div class="timeline-start mb-10 md:text-end">
-        <time class="font-mono italic">2022</time>
-        <div class="text-lg font-black">Kelas 9</div>
-        Di tahun ini adalah tahun dimana SMADIRETION menjadi bukti bahwa sekumpulan bocah yang hanya bisa menangis saat ditinggal orang tua, kini telah menjadi dewasa dengan mental dan api semangat yang membara dan juga siap untuk berperang melawan masalah yang lebih besar di masa depan nanti, disini kami mengulang semua materi yang telah kami perlajari dan kami tuangkan dalam kertas esai kami.
+        <time class="font-mono italic">2001</time>
+        <div class="text-lg font-black">iPod</div>
+        The iPod is a discontinued series of portable media players and multi-purpose mobile devices
+        designed and marketed by Apple Inc. The first version was released on October 23, 2001, about
+        8+1⁄2 months after the Macintosh version of iTunes was released. Apple sold an estimated 450
+        million iPod products as of 2022. Apple discontinued the iPod product line on May 10, 2022. At
+        over 20 years, the iPod brand is the oldest to be discontinued by Apple
       </div>
       <hr />
     </li>
@@ -168,9 +175,13 @@
         </svg>
       </div>
       <div class="timeline-end mb-10">
-        <time class="font-mono italic">2023</time>
-        <div class="text-lg font-black">Lulus</div>
-        di dalam waktu yang hanya terhitung 4 jam ini, kami menunjukan keberadaan kami kepada orang tua kami bahwa, kami sudah lulus dari masalah masalah yang kami hadapi selama 3 tahun dan membawa perbekalan yang lebih dari cukup untuk masa depan kami, dan mungkin diluar sana akan ada lebih banyak masalah yang kami hadapi tetapi api naga SMADIRETION akan selalu berkobar walaupun hujan masalah terus mengguyur.
+        <time class="font-mono italic">2007</time>
+        <div class="text-lg font-black">iPhone</div>
+        iPhone is a line of smartphones produced by Apple Inc. that use Apple's own iOS mobile
+        operating system. The first-generation iPhone was announced by then-Apple CEO Steve Jobs on
+        January 9, 2007. Since then, Apple has annually released new iPhone models and iOS updates. As
+        of November 1, 2018, more than 2.2 billion iPhones had been sold. As of 2022, the iPhone
+        accounts for 15.6% of global smartphone market share
       </div>
       <hr />
     </li>
@@ -189,15 +200,11 @@
         </svg>
       </div>
       <div class="timeline-start mb-10 md:text-end">
-        <time class="font-mono italic">Epilog</time>
-        <div class="text-lg font-black">-</div>
-        (kosong) * dan akan selalu kosong *
-        <br>
-        <br>
-        <div>
-          album Epilog
-          <a href="memories.html"><button class="btn glass bg-gray-300 hover:bg-orange-400 text-gray-700 hover:text-white"> SMADIRETION </button></a>
-        </div>
+        <time class="font-mono italic">2015</time>
+        <div class="text-lg font-black">Apple Watch</div>
+        The Apple Watch is a line of smartwatches produced by Apple Inc. It incorporates fitness
+        tracking, health-oriented capabilities, and wireless telecommunication, and integrates with
+        iOS and other Apple products and services
       </div>
     </li>
   </ul>
